[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro121_radiolab"
version = "0.1.0"
description = "Helper functions and analysis tools for Astro 121 Radio Lab"
readme = "README.md"
requires-python = ">=3.8"
license = {text = ""}
authors = [{ name = "Nathaniel Sifuentes" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pytest"
]

[tool.setuptools]
py-modules = ["functions"]
packages = {find = {where = ["src"]}}
package-dir = {""="src"}
